# Tauri

./: .gitignore  README.md  SECURITY.md  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  PktMon.etl  build.rs  tauri.conf.json
src-tauri/src/: blockchain.rs  crypto.rs  lib.rs  meta_transaction.rs  packet_capture.rs
src/components/: Dashboard.tsx  DashboardPage.tsx  HistoryVerification.tsx  Intro.tsx  NetworkPage.tsx  Onboarding.tsx  SettingsPage.tsx  TermsAndConditions.tsx
src/config/: blockchain.ts  gasless.ts
src/lib/abi/: MachineRegistration.json  MachineRegistration_ABI.json
src/services/: BlockchainService.ts  EncryptedStorage.ts  NetworkService.ts  WalletService.ts
src/types/: FlowRow.ts
