[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bip39 = "2.0"
k256 = "0.13"
sha3 = "0.10"
hex = "0.4"
secp256k1 = "0.30"
aes-gcm = "0.10.3"
chacha20poly1305 = "0.10"
generic-array = "1.0"
rand = "0.8"
# Network monitoring dependencies
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
# Network packet capture using Npcap
pcap = "0.11"
etherparse = "0.16"
# Admin privilege checking
is_elevated = "0.1"
# Enhanced packet processing for CIC-IDS2017 features
csv = "1.3"
# Additional utilities
anyhow = "1.0"
# Blockchain dependencies
ethers = "2.0"
ethers-core = "2.0"
ethers-providers = "2.0"
ethers-signers = "2.0"
ethers-contract = "2.0"
ethers-middleware = "2.0"

